# REBOURS

./: .gitignore  MANUEL_UTILISATION_HORLOGE.html  MANUEL_UTILISATION_HORLOGE.md  README.md  aflogo.tiff  generate-icon.py  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yml
electron/: main.cjs
scripts/: prepare-github-web.mjs  write-dist-root-index.mjs
src/: App.tsx  CrashBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/domain/: defaultConfig.ts  types.ts
src/lib/: storage.ts  time.ts
src/modules/collective/: CollectiveModule.tsx
src/modules/oral/: OralRoomModule.tsx
src/modules/settings/: SettingsModule.tsx
