[package]
name = "horloge_delf_dalf"
version = "0.0.0"
description = "Horloge DELF DALF"
authors = ["REBOURS"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "horloge_delf_dalf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
